force-app/main/default/objects/Incentive_All_Program_Config__c/Incentive_All_Program_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Incentive All Program Config</label>
</CustomObject>