force-app/main/default/objects/Incentive_All_Program_Config__c/fields/Partner_Levels_for_Annual_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Partner_Levels_for_Annual_Incentive__c</fullName>
    <label>Partner Levels for Annual Incentive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>