force-app/main/default/objects/Incentive_All_Program_Config__c/fields/Passed_date__c.field-meta.xml
<CustomField>
    <fullName>Passed_date__c</fullName>
    <label>Passed date</label>
    <type>Date</type>
</CustomField>